adding the checkout page

--- a/grillkitchen.html
+++ b/grillkitchen.html
@@ -98,7 +98,7 @@
                                     </div>
                                     <div class="cart-text">
                                         <span class="digit">My Cart</span>
-                                        <span class="cart-digit-bold" id="total-value">$209.00</span>
+                                        <span class="cart-digit-bold" id="total-value">&#8358;209.00</span>
                                     </div>
                                 </a>
                                 <div class="shopping-cart-content" id="shopping-cart">
@@ -110,7 +110,7 @@
                                                 <div class="shopping-cart-title">
                                                     <h4><a href="#">Phantom Remote </a></h4>
                                                     <h6>Qty: 02</h6>
-                                                    <span>$260.00</span>
+                                                    <span>&#8358;260.00</span>
                                                 </div>
                                                 <div class="shopping-cart-delete">
                                                     <a href="#"><i class="ion ion-close"></i></a>
@@ -123,7 +123,7 @@
                                                 <div class="shopping-cart-title">
                                                     <h4><a href="#">Phantom Remote</a></h4>
                                                     <h6>Qty: 02</h6>
-                                                    <span>$260.00</span>
+                                                    <span>&#8358;260.00</span>
                                                 </div>
                                                 <div class="shopping-cart-delete">
                                                     <a href="#"><i class="ion ion-close"></i></a>
@@ -131,8 +131,8 @@
                                             </li>
                                         </ul> -->
                                     <!-- <div class="shopping-cart-total">
-                                            <h4>Shipping : <span>$20.00</span></h4>
-                                            <h4>Total : <span class="shop-total">$260.00</span></h4>
+                                            <h4>Shipping : <span>&#8358;20.00</span></h4>
+                                            <h4>Total : <span class="shop-total">&#8358;260.00</span></h4>
                                         </div>
                                         <div class="shopping-cart-btn">
                                             <a href="cart-page.html">view cart</a>
@@ -765,8 +765,8 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$100.00</span>
-                                                <span class="product-price-old">$120.00 </span>
+                                                <span>&#8358;100.00</span>
+                                                <span class="product-price-old">&#8358;120.00 </span>
                                             </div>
                                         </div>
                                     </div>
@@ -790,7 +790,7 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$200.00</span>
+                                                <span>&#8358;200.00</span>
                                             </div>
                                         </div>
                                     </div>
@@ -814,8 +814,8 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$90.00</span>
-                                                <span class="product-price-old">$100.00 </span>
+                                                <span>&#8358;90.00</span>
+                                                <span class="product-price-old">&#8358;100.00 </span>
                                             </div>
                                         </div>
                                     </div>
@@ -839,7 +839,7 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$50.00</span>
+                                                <span>&#8358;50.00</span>
                                             </div>
                                         </div>
                                     </div>
@@ -867,8 +867,8 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$100.00</span>
-                                                <span class="product-price-old">$120.00 </span>
+                                                <span>&#8358;100.00</span>
+                                                <span class="product-price-old">&#8358;120.00 </span>
                                             </div>
                                         </div>
                                     </div>
@@ -892,7 +892,7 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$200.00</span>
+                                                <span>&#8358;200.00</span>
                                             </div>
                                         </div>
                                     </div>
@@ -916,8 +916,8 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$90.00</span>
-                                                <span class="product-price-old">$100.00 </span>
+                                                <span>&#8358;90.00</span>
+                                                <span class="product-price-old">&#8358;100.00 </span>
                                             </div>
                                         </div>
                                     </div>
@@ -941,7 +941,7 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$50.00</span>
+                                                <span>&#8358;50.00</span>
                                             </div>
                                         </div>
                                     </div>
@@ -969,8 +969,8 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$100.00</span>
-                                                <span class="product-price-old">$120.00 </span>
+                                                <span>&#8358;100.00</span>
+                                                <span class="product-price-old">&#8358;120.00 </span>
                                             </div>
                                         </div>
                                     </div>
@@ -994,7 +994,7 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$200.00</span>
+                                                <span>&#8358;200.00</span>
                                             </div>
                                         </div>
                                     </div>
@@ -1018,8 +1018,8 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$90.00</span>
-                                                <span class="product-price-old">$100.00 </span>
+                                                <span>&#8358;90.00</span>
+                                                <span class="product-price-old">&#8358;100.00 </span>
                                             </div>
                                         </div>
                                     </div>
@@ -1043,7 +1043,7 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$50.00</span>
+                                                <span>&#8358;50.00</span>
                                             </div>
                                         </div>
                                     </div>
@@ -1226,8 +1226,8 @@
                                 <div class="modal-pro-content">
                                     <h3>PRODUCTS NAME HERE </h3>
                                     <div class="product-price-wrapper">
-                                        <span>$120.00</span>
-                                        <span class="product-price-old">$162.00 </span>
+                                        <span>&#8358;120.00</span>
+                                        <span class="product-price-old">&#8358;162.00 </span>
                                     </div>
                                     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet.</p>	
                                     <div class="quick-view-select">
