--- a/lounge.html
+++ b/lounge.html
@@ -98,7 +98,7 @@
                                     </div>
                                     <div class="cart-text">
                                         <span class="digit">My Cart</span>
-                                        <span class="cart-digit-bold" id="total-value">$209.00</span>
+                                        <span class="cart-digit-bold" id="total-value">&#8358;209.00</span>
                                     </div>
                                 </a>
                                 <div class="shopping-cart-content" id="shopping-cart">
@@ -110,7 +110,7 @@
                                                 <div class="shopping-cart-title">
                                                     <h4><a href="#">Phantom Remote </a></h4>
                                                     <h6>Qty: 02</h6>
-                                                    <span>$260.00</span>
+                                                    <span>&#8358;260.00</span>
                                                 </div>
                                                 <div class="shopping-cart-delete">
                                                     <a href="#"><i class="ion ion-close"></i></a>
@@ -123,7 +123,7 @@
                                                 <div class="shopping-cart-title">
                                                     <h4><a href="#">Phantom Remote</a></h4>
                                                     <h6>Qty: 02</h6>
-                                                    <span>$260.00</span>
+                                                    <span>&#8358;260.00</span>
                                                 </div>
                                                 <div class="shopping-cart-delete">
                                                     <a href="#"><i class="ion ion-close"></i></a>
@@ -131,8 +131,8 @@
                                             </li>
                                         </ul> -->
                                     <!-- <div class="shopping-cart-total">
-                                            <h4>Shipping : <span>$20.00</span></h4>
-                                            <h4>Total : <span class="shop-total">$260.00</span></h4>
+                                            <h4>Shipping : <span>&#8358;20.00</span></h4>
+                                            <h4>Total : <span class="shop-total">&#8358;260.00</span></h4>
                                         </div>
                                         <div class="shopping-cart-btn">
                                             <a href="cart-page.html">view cart</a>
@@ -3418,8 +3418,8 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$100.00</span>
-                                                <span class="product-price-old">$120.00 </span>
+                                                <span>&#8358;100.00</span>
+                                                <span class="product-price-old">&#8358;120.00 </span>
                                             </div>
                                         </div>
                                     </div>
@@ -3443,7 +3443,7 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$200.00</span>
+                                                <span>&#8358;200.00</span>
                                             </div>
                                         </div>
                                     </div>
@@ -3467,8 +3467,8 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$90.00</span>
-                                                <span class="product-price-old">$100.00 </span>
+                                                <span>&#8358;90.00</span>
+                                                <span class="product-price-old">&#8358;100.00 </span>
                                             </div>
                                         </div>
                                     </div>
@@ -3492,7 +3492,7 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$50.00</span>
+                                                <span>&#8358;50.00</span>
                                             </div>
                                         </div>
                                     </div>
@@ -3520,8 +3520,8 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$100.00</span>
-                                                <span class="product-price-old">$120.00 </span>
+                                                <span>&#8358;100.00</span>
+                                                <span class="product-price-old">&#8358;120.00 </span>
                                             </div>
                                         </div>
                                     </div>
@@ -3545,7 +3545,7 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$200.00</span>
+                                                <span>&#8358;200.00</span>
                                             </div>
                                         </div>
                                     </div>
@@ -3569,8 +3569,8 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$90.00</span>
-                                                <span class="product-price-old">$100.00 </span>
+                                                <span>&#8358;90.00</span>
+                                                <span class="product-price-old">&#8358;100.00 </span>
                                             </div>
                                         </div>
                                     </div>
@@ -3594,7 +3594,7 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$50.00</span>
+                                                <span>&#8358;50.00</span>
                                             </div>
                                         </div>
                                     </div>
@@ -3622,8 +3622,8 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$100.00</span>
-                                                <span class="product-price-old">$120.00 </span>
+                                                <span>&#8358;100.00</span>
+                                                <span class="product-price-old">&#8358;120.00 </span>
                                             </div>
                                         </div>
                                     </div>
@@ -3647,7 +3647,7 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$200.00</span>
+                                                <span>&#8358;200.00</span>
                                             </div>
                                         </div>
                                     </div>
@@ -3671,8 +3671,8 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$90.00</span>
-                                                <span class="product-price-old">$100.00 </span>
+                                                <span>&#8358;90.00</span>
+                                                <span class="product-price-old">&#8358;100.00 </span>
                                             </div>
                                         </div>
                                     </div>
@@ -3696,7 +3696,7 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$50.00</span>
+                                                <span>&#8358;50.00</span>
                                             </div>
                                         </div>
                                     </div>
@@ -3883,8 +3883,8 @@
                                 <div class="modal-pro-content">
                                     <h3>PRODUCTS NAME HERE </h3>
                                     <div class="product-price-wrapper">
-                                        <span>$120.00</span>
-                                        <span class="product-price-old">$162.00 </span>
+                                        <span>&#8358;120.00</span>
+                                        <span class="product-price-old">&#8358;162.00 </span>
                                     </div>
                                     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet.</p>	
                                     <div class="quick-view-select">
