--- a/resturant.html
+++ b/resturant.html
@@ -98,7 +98,7 @@
                                     </div>
                                     <div class="cart-text">
                                         <span class="digit">My Cart</span>
-                                        <span class="cart-digit-bold" id="total-value">$209.00</span>
+                                        <span class="cart-digit-bold" id="total-value">&#8358;209.00</span>
                                     </div>
                                 </a>
                                 <div class="shopping-cart-content" id="shopping-cart">
@@ -110,7 +110,7 @@
                                                 <div class="shopping-cart-title">
                                                     <h4><a href="#">Phantom Remote </a></h4>
                                                     <h6>Qty: 02</h6>
-                                                    <span>$260.00</span>
+                                                    <span>&#8358;260.00</span>
                                                 </div>
                                                 <div class="shopping-cart-delete">
                                                     <a href="#"><i class="ion ion-close"></i></a>
@@ -123,7 +123,7 @@
                                                 <div class="shopping-cart-title">
                                                     <h4><a href="#">Phantom Remote</a></h4>
                                                     <h6>Qty: 02</h6>
-                                                    <span>$260.00</span>
+                                                    <span>&#8358;260.00</span>
                                                 </div>
                                                 <div class="shopping-cart-delete">
                                                     <a href="#"><i class="ion ion-close"></i></a>
@@ -131,8 +131,8 @@
                                             </li>
                                         </ul> -->
                                     <!-- <div class="shopping-cart-total">
-                                            <h4>Shipping : <span>$20.00</span></h4>
-                                            <h4>Total : <span class="shop-total">$260.00</span></h4>
+                                            <h4>Shipping : <span>&#8358;20.00</span></h4>
+                                            <h4>Total : <span class="shop-total">&#8358;260.00</span></h4>
                                         </div>
                                         <div class="shopping-cart-btn">
                                             <a href="cart-page.html">view cart</a>
@@ -848,7 +848,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="custom-col-5" onclick="console.log(`Adding ${document.getElementsByName}`)">
+                        <div class="custom-col-5" onclick="console.log(`Adding &#8358;{document.getElementsByName}`)">
                             <div class="product-wrapper mb-25">
                                 <div class="product-img">
                                     <a href="#product-details">
@@ -12607,8 +12607,8 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$100.00</span>
-                                                <span class="product-price-old">$120.00 </span>
+                                                <span>&#8358;100.00</span>
+                                                <span class="product-price-old">&#8358;120.00 </span>
                                             </div>
                                         </div>
                                     </div>
@@ -12632,7 +12632,7 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$200.00</span>
+                                                <span>&#8358;200.00</span>
                                             </div>
                                         </div>
                                     </div>
@@ -12656,8 +12656,8 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$90.00</span>
-                                                <span class="product-price-old">$100.00 </span>
+                                                <span>&#8358;90.00</span>
+                                                <span class="product-price-old">&#8358;100.00 </span>
                                             </div>
                                         </div>
                                     </div>
@@ -12681,7 +12681,7 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$50.00</span>
+                                                <span>&#8358;50.00</span>
                                             </div>
                                         </div>
                                     </div>
@@ -12709,8 +12709,8 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$100.00</span>
-                                                <span class="product-price-old">$120.00 </span>
+                                                <span>&#8358;100.00</span>
+                                                <span class="product-price-old">&#8358;120.00 </span>
                                             </div>
                                         </div>
                                     </div>
@@ -12734,7 +12734,7 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$200.00</span>
+                                                <span>&#8358;200.00</span>
                                             </div>
                                         </div>
                                     </div>
@@ -12758,8 +12758,8 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$90.00</span>
-                                                <span class="product-price-old">$100.00 </span>
+                                                <span>&#8358;90.00</span>
+                                                <span class="product-price-old">&#8358;100.00 </span>
                                             </div>
                                         </div>
                                     </div>
@@ -12783,7 +12783,7 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$50.00</span>
+                                                <span>&#8358;50.00</span>
                                             </div>
                                         </div>
                                     </div>
@@ -12811,8 +12811,8 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$100.00</span>
-                                                <span class="product-price-old">$120.00 </span>
+                                                <span>&#8358;100.00</span>
+                                                <span class="product-price-old">&#8358;120.00 </span>
                                             </div>
                                         </div>
                                     </div>
@@ -12836,7 +12836,7 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$200.00</span>
+                                                <span>&#8358;200.00</span>
                                             </div>
                                         </div>
                                     </div>
@@ -12860,8 +12860,8 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$90.00</span>
-                                                <span class="product-price-old">$100.00 </span>
+                                                <span>&#8358;90.00</span>
+                                                <span class="product-price-old">&#8358;100.00 </span>
                                             </div>
                                         </div>
                                     </div>
@@ -12885,7 +12885,7 @@
                                                 <a href="#product-details">PRODUCTS NAME HERE </a>
                                             </h4>
                                             <div class="product-price-wrapper">
-                                                <span>$50.00</span>
+                                                <span>&#8358;50.00</span>
                                             </div>
                                         </div>
                                     </div>
@@ -13072,8 +13072,8 @@
                                 <div class="modal-pro-content">
                                     <h3>PRODUCTS NAME HERE </h3>
                                     <div class="product-price-wrapper">
-                                        <span>$120.00</span>
-                                        <span class="product-price-old">$162.00 </span>
+                                        <span>&#8358;120.00</span>
+                                        <span class="product-price-old">&#8358;162.00 </span>
                                     </div>
                                     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet.</p>	
                                     <div class="quick-view-select">
