--- a/cart-page.html
+++ b/cart-page.html
@@ -279,6 +279,7 @@
                                 </tbody>
                             </table>
                         </div>
+
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="cart-shiping-update-wrapper">
@@ -293,49 +294,51 @@
                             </div>
                         </div>
                     </form>
-                    <!---- <div class="row">
-                        <div class="col-lg-4 col-md-6">
-                            <div class="cart-tax">
-                                <div class="title-wrap">
-                                    <h4 class="cart-bottom-title section-bg-gray">Estimate Shipping And Tax</h4>
-                                </div>
-                                <div class="tax-wrapper">
-                                    <p>Enter your destination to get a shipping estimate.</p>
-                                    <div class="tax-select-wrapper">
-                                        <div class="tax-select">
-                                            <label>
+
+                    <!--<div class="row">
+                    <div class="col-lg-4 col-md-6">
+                        <div class="cart-tax">
+                            <div class="title-wrap">
+                                <h4 class="cart-bottom-title section-bg-gray">Estimate Shipping And Tax</h4>
+                            </div>
+                            <div class="tax-wrapper">
+                                <p>Enter your destination to get a shipping estimate.</p>
+                                <div class="tax-select-wrapper">
+                                    <div class="tax-select">
+                                        <label>
                                                     * Country
                                                 </label>
-                                            <select class="email s-email s-wid">
+                                        <select class="email s-email s-wid">
                                                     <option>Bangladesh</option>
                                                     <option>Albania</option>
                                                     <option>Åland Islands</option>
                                                     <option>Afghanistan</option>
                                                     <option>Belgium</option>
                                                 </select>
-                                        </div>
-                                        <div class="tax-select">
-                                            <label>
+                                    </div>
+                                    <div class="tax-select">
+                                        <label>
                                                     * Region / State
                                                 </label>
-                                            <select class="email s-email s-wid">
+                                        <select class="email s-email s-wid">
                                                     <option>Bangladesh</option>
                                                     <option>Albania</option>
                                                     <option>Åland Islands</option>
                                                     <option>Afghanistan</option>
                                                     <option>Belgium</option>
                                                 </select>
-                                        </div>
-                                        <div class="tax-select">
-                                            <label>
+                                    </div>
+                                    <div class="tax-select">
+                                        <label>
                                                     * Zip/Postal Code
                                                 </label>
-                                            <input type="text">
-                                        </div>
-                                        <button class="cart-btn-2" type="submit">Get A Quote</button>
+                                        <input type="text">
                                     </div>
+                                    <button class="cart-btn-2" type="submit">Get A Quote</button>
                                 </div>
-                            </div>-->
+                            </div>
+                        </div>-->
+
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="discount-code-wrapper">
