updating the prices

--- a/gardenbar.html
+++ b/gardenbar.html
@@ -81,7 +81,7 @@
                                 </a>
                             </div>
                             <div class="header-wishlist">
-                                <a href="wishlist.html#">
+                                <a href="#">
                                     <div class="header-icon-style">
                                         <i class="icon-heart icons"></i>
                                     </div>
@@ -98,7 +98,7 @@
                                     </div>
                                     <div class="cart-text">
                                         <span class="digit">My Cart</span>
-                                        <span class="cart-digit-bold" id="total-value">$209.00</span>
+                                     <!---- <span class="cart-digit-bold" id="total-value">&#8358;209.00</span> -->
                                     </div>
                                 </a>
                                 <div class="shopping-cart-content" id="shopping-cart">
