--- a/pool.html
+++ b/pool.html
@@ -160,7 +160,7 @@
                                     </li>
                                     <li><a href="https://princessluxuryhotels.com/about-i/">about</a></li>
 
-                                    <li><a href="https://princessluxuryhotels.com/contact-i/" target="_blank">contact us</a></li>
+                                    <li><a href="https://princessluxuryhotels.com/contact" target="_blank">contact us</a></li>
 
                                 </ul>
                             </nav>
@@ -181,8 +181,8 @@
 
 
                                     </li>
-                                    <li><a href="https://princessluxuryhotels.com/contact-i/">about us</a></li>
-                                    <li><a href="https://princessluxuryhotels.com/contact-i/">contact us</a></li>
+                                    <li><a href="https://princessluxuryhotels.com/contact">about us</a></li>
+                                    <li><a href="https://princessluxuryhotels.com/contact">contact us</a></li>
 
                                 </ul>
 
