--- a/resturant.html
+++ b/resturant.html
@@ -185,7 +185,7 @@
                                             
 										</li>-->
                                         <li><a href="https://princessluxuryhotels.com/about-i/" target="_blank">about us</a></li>
-                                        <li><a href="https://princessluxuryhotels.com/contact-i/" target="_blank">contact us</a></li>
+                                        <li><a href="https://princessluxuryhotels.com/contact" target="_blank">contact us</a></li>
 
                                 </ul>
 
