--- a/gardenbar.html
+++ b/gardenbar.html
@@ -432,7 +432,7 @@
                             <div class="product-wrapper mb-25">
                                 <div class="product-img">
                                     <a href="#">
-                                        <img src="assets/images/lounge/Mirinda-Plastic.jpg" alt="">
+                                        <img src="assets/images/lounge/beta-malt.png" alt="">
                                     </a>
                                     <div class="product-action">
                                         <div class="pro-action-left">
@@ -631,7 +631,7 @@
                                         <a href="#">50CL FANTA</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;200</span>
+                                        <span>&#8358;500</span>
                                     </div>
                                 </div>
                             </div>
@@ -868,7 +868,7 @@
                                         <a href="#">MALTINA</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;400</span>
+                                        <span>&#8358;500</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
@@ -895,7 +895,7 @@
                                         <a href="#">MALTA GUINNESS</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;400</span>
+                                        <span>&#8358;500</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
@@ -922,7 +922,7 @@
                                         <a href="#">FAYROUZ</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;300</span>
+                                        <span>&#8358;400</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
